--- a/style.css
+++ b/style.css
@@ -2,10 +2,15 @@
     display: flex;
     text-align: center;
     justify-content: center;
+    align-content: center;
+    margin: 0 auto;
+    padding: 100px;
 }
-
-body {
+body, html {
     width: 100%;
-    background-image: url('http://www.mansfieldct.org/Schools/MMS/staff/baxter/New%20Light%20Powerpoint_files/slide0001_background.gif')
-
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url('http://www.mansfieldct.org/Schools/MMS/staff/baxter/New%20Light%20Powerpoint_files/slide0001_background.gif');
 }
