--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
     justify-content: center;
     align-content: center;
     margin: 0 auto;
-    padding: 100px;
+    padding: 200px 0 0 100px;
+    text-decoration: underline;
 }
 body, html {
     width: 100%;
@@ -13,4 +14,35 @@ body, html {
     background-repeat: no-repeat;
     background-size: cover;
     background-image: url('http://www.mansfieldct.org/Schools/MMS/staff/baxter/New%20Light%20Powerpoint_files/slide0001_background.gif');
+}
+#username {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+    font-size: 30px;
+}
+.submitName {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+    font-size:30px;
+    font-weight: bold;
+    padding: 50px 0 0 0;
+    color: gold;
+}
+.name {
+    padding: 0 25px 0 0;
+}
+.difficultyRange {
+    display: inline-block;
+    align-items: center;
+    font-size: 30px;
+    padding: 30px 0 0 0;
+    margin: 0 auto;
+}
+#easy {
+    font-size: 30px;
+    margin: 10px; 
 }
