--- a/style2.css
+++ b/style2.css
@@ -1,78 +1,33 @@
-.grid {
-    display: flex;
-    position: fixed;
-    grid-template: repeat(5, 1fr) / repeat(5, 1fr);
-    width: 100%;
-    height: 700px;
-    border: 2px black solid;
-    margin: 0 auto;
-    padding: 0;
-}
 body {
-    
+    background-color: blue;
 }
 .gameName {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     color: gold;
     font-size: 100px;
-    text-align: center;
-    padding: 0;
-    margin: 0 auto;
+    text-decoration: underline;
+    border: solid black 2px;
+    padding: 20px;
 }
 .categories {
     display: flex;
-    position: absolute;
     flex-direction: row;
-    height:140px;
+    font-size: 45px;
+    padding: 5px;
+    border: solid black 1px;
+    justify-content: space-around;
 }
-.a {
-    display: flex;
-    background-color: blue;
-    color: white;
-    border-radius: 5px;
-    border: solid black 2px; 
+
+.board {
+    display: grid;
+    width: 100%;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr; 
+}
+#cat11 {
+    font-size: 80px;
+    border: solid black 5px;
     text-align: center;
-    align-items: center;
-    
-}.b {
-    display: flex;
-    background-color: blue;
-    color: white;
-    border-radius: 5px;
-    border: solid black 2px; 
-    text-align: center;
-}
-.c {
-    display:flex;
-    background-color: blue;
-    color: white;
-    border-radius: 5px;
-    border: solid black 2px; 
-    text-align: center;
-}
-.d {
-    background-color: blue;
-    color: white;
-    border-radius: 5px;
-    border: solid black 2px;
-    text-align: center;    
-}
-.e {
-    background-color: blue;
-    color: white;
-    border-radius: 5px;
-    border: solid black 2px;
-    text-align: center; 
-}
-.questions {
-    display: flex;
-    position: absolute;
-    flex-direction: row;
-    height:140px;
-}
-.f {
-    background-color: blue;
-    color: white;
-    border-radius: 5px;
-    border: solid black 2px;
-    text-align: center; 
 }
